# aoc24

./: .clangd  CMakeLists.txt  README.md  conanfile.txt
day1/: day1.cpp
day2/: day2.cpp
day3/: day3.cpp
day5/: day5.cpp
